docs: E6/16/124 defaults, RM vs tfvars configuration summary